# dspaces

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  COPYRIGHT  README.md
.github/workflows/: cmake.yml  format.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  dspaces.py  dspaces_wrapper.c  dspaces_wrapper.h
cmake/: FindGDRCOPY.cmake  FindMPI4Py.cmake  FindNetCDF.cmake  grpc.cmake  python_bindings.cmake
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  optimization.rst  running.rst  usage.rst
examples/: opts.mk.in
examples/ex1_putget/: dataspaces.conf  get.c  put.c
examples/ex2_boundingBox/: dataspaces.conf  get.c  put.c
examples/ex3_minmax/: minmaxavg_reader.c  minmaxavg_writer.c
examples/ex4_collective/: Makefile  get.c  put.c
examples/ex5_minmax_python/: minmaxavg_reader.py  minmaxavg_writer.py
include/: CMakeLists.txt  bbox.h  dspaces-common.h  dspaces-conf.h  dspaces-grpc.h  dspaces-logging.h  dspaces-modules.h  dspaces-ops.h  dspaces-remote.h  dspaces-server.h  dspaces-storage.h  dspaces.h  dspacesp.h  gspace.h  list.h  ss_data.h  str_hash.h  toml.h  util.h
include/file_storage/: file.h  file_hdf5.h  policy.h
include/rpc/: wrapper_grpc.h
modules/: CMakeLists.txt  azure_mod.py  ds_reg.py  s3nc_mod.py  url_mod.py
scripts/: build-and-run.sh  format.sh
src/: CMakeLists.txt  bbox.c  dspaces-client.c  dspaces-conf.c  dspaces-config.cmake.in  dspaces-grpc.cpp  dspaces-logging.c  dspaces-modules.c  dspaces-ops.c  dspaces-server.c  dspaces-server.pc.in  ss_data.c  ss_data_cuda.c  ssd_copy.cu  toml.c  util.c
src/file_storage/: file.c  file_hdf5.c  policy.c
src/rpc/: wrapper_grpc.cpp
src/rpc/proto/: dspaces.proto
tests/: CMakeLists.txt  dspaces_ls.c  server.c  terminator.c  test_calc.c  test_get_run.c  test_put_run.c  test_script.sh.in  test_sub_run.c  test_writer.c  test_writer_server.c
